--- a/style/media.css
+++ b/style/media.css
@@ -1,14 +1,15 @@
 @media all and (max-width:800px) {
-.contentBox {
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    overflow-x: hidden;
-     background: #F5F5F5; 
-/*     background: linear-gradient(90deg, #193E58 314px, #F5F5F5 314px); */
-}
+    .contentBox {
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        overflow-x: hidden;
+        background: #F5F5F5;
+        /*     background: linear-gradient(90deg, #193E58 314px, #F5F5F5 314px); */
+    }
+
     .slider {
         overflow-x: scroll;
         overflow-y: hidden;
@@ -20,6 +21,28 @@
 
     .content {
         padding: 70px 20px 20px 0px;
+    }
+
+    .menu {
+        height: 100%;
+        overflow-y: auto;
+    }
+
+    .boxWelcome .right {
+        width: 100%;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    .col-lg-m {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .userBox .popuptext {
+        left: -55px !important;
     }
 
 
