--- a/style/humburgerMenu.css
+++ b/style/humburgerMenu.css
@@ -40,7 +40,7 @@
         left: -100%;
         transition-duration: .25s;
         z-index: 10;
-        padding: 65px 0;
+        padding: 65px 0 20px;
     }
 
     .menu__btn {
