--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ form {
 
 .dashboard {
     width: 314px;
-    height: 100vh;
+/*    height: 100vh;*/
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -40,10 +40,15 @@ form {
     background-color: #193E58;
     padding: 34px 0;
 }
+.hamburger-menu
+{
+    height: 100vh;
+}
 
 .menu {
     list-style: none;
     width: 100%;
+    height: 884px;
     display: flex;
     flex-direction: column;
 }
@@ -293,6 +298,7 @@ form {
 .col-lg-m {
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: auto;
     padding: 11px 0;
 }
@@ -387,7 +393,7 @@ form {
     height: 100%;
     font-size: 12px;
     font-weight: bold;
-    line-height: 26px;
+/*    line-height: 26px;*/
     letter-spacing: 1.68px;
     text-decoration: none;
     display: flex;
@@ -401,11 +407,11 @@ form {
 
 .blueBtn {
     background: #193E58 0% 0% no-repeat padding-box;
-    color: #FFFFFF;
+    color: #FFFFFF!important;
 }
 
 .whiteBtn {
-    color: #193E58;
+    color: #193E58!important;
     background-color: #F5F5F5;
 }
 
@@ -433,7 +439,7 @@ form {
 }
 
 .push:hover {
-    color: white;
+    color: white!important;
     text-decoration: none;
 }
 
@@ -455,7 +461,7 @@ form {
 }
 
 .btn-primary:hover {
-    color: #fff;
+    color: #fff!important;
     background-color: #193E58;
     border: none;
 }
@@ -736,7 +742,7 @@ form {
 
 @media all and (max-width:1200px) {
     .slider {
-        width: 865px;
+        width: 100%;
         margin: 42px 0 47px;
         overflow-y: auto;
     }
@@ -752,7 +758,7 @@ form {
 
     .slider .column1 {
         /* width: 387px; */
-        width: 20.7%;
+/*        width: 20.7%;*/
     }
 
 
@@ -780,12 +786,12 @@ form {
     }
 
     .slider .column6 {
-        width: 12.4%;
+/*        width: 12.4%;*/
     }
 
     .slider .column2,
     .slider .column3 {
-        width: 15.1%;
+/*        width: 15.1%;*/
     }
 
     .content {
