--- a/style/humburgerMenu.css
+++ b/style/humburgerMenu.css
@@ -12,6 +12,10 @@
         overflow-y: scroll;
     }
 
+    .dashboard::-webkit-scrollbar {
+        width: 0;
+    }
+
     #menu__toggle {
         opacity: 0;
         display: block;
@@ -74,10 +78,10 @@
         display: flex;
         align-items: center;
         position: absolute;
-        top: 20px;
+        top: 12px;
         left: 20px;
         width: 26px;
-        height: 26px;
+        height: 46px;
         cursor: pointer;
         z-index: 11;
     }
@@ -92,6 +96,7 @@
         height: 2px;
         background-color: #F0B52D;
         transition-duration: .25s;
+        top: 16px;
     }
 
     .menu__btn > span::before {
