--- a/style/humburgerMenu.css
+++ b/style/humburgerMenu.css
@@ -1,10 +1,183 @@
+.dashboard {
+    width: 314px;
+    /*    height: 100vh;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #193E58;
+    padding: 34px 0;
+}
+
+.hamburger-menu {
+    height: 100vh;
+}
+
+.menu {
+    list-style: none;
+    width: 100%;
+    height: 884px;
+    display: flex;
+    flex-direction: column;
+}
+
+.menu li {
+    border-bottom: 1px solid #F5F5F547;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 25px;
+    cursor: pointer;
+    transition: hover .3s;
+}
+
+.menu li:first-of-type {
+    padding: 0 25px 32px;
+    border: none;
+}
+
+.logo img {
+    margin: 0 12px 0 0;
+    width: 40.5px;
+}
+
+.menu li a.logo {
+    color: #F0B52D;
+    font-weight: bold;
+    font-size: 21px;
+    font-family: Poppins, sans-serif;
+    line-height: 21px;
+    letter-spacing: 4.2px;
+    display: flex;
+    align-items: center;
+}
+
+.menu li:first-of-type:hover {
+    background-color: transparent;
+}
+
+.clickLi,
+.menu .clickLi:hover {
+    background-color: white;
+    border: 1px solid #F5F5F547;
+}
+
+.menu .clickLi .title {
+    color: #193E58;
+}
+
+.menu li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.menu li .title {
+    text-align: left;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+    cursor: pointer;
+    text-decoration: none;
+    display: flex;
+
+}
+
+.menu .hasSub div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 25px;
+}
+
+.menu .hasSub {
+    padding: 0;
+}
+
+.fa-caret-down:before {
+    color: white;
+    font-size: 18px;
+}
+
+.title img {
+    max-width: 67%;
+}
+
+.icon4 {
+    position: absolute;
+}
+
+.menu li:nth-of-type(6) .title img {
+    max-width: 100%;
+}
+
+.title p {
+    width: 27px;
+    margin: 0 11px 0 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.subMenu {
+    width: 100%;
+    display: none;
+}
+
+.open {
+    display: block;
+}
+
+.subMenu li {
+    line-height: 30px;
+    padding: 13px 63px;
+    border-bottom: none !important;
+    background-color: white;
+    cursor: pointer;
+}
+
+.subMenu li:first-of-type {
+    padding: 13px 63px;
+}
+
+.subMenu li:first-of-type:hover {
+    background-color: rgba(25, 80, 68, 0.1);
+}
+
+.subMenu li a {
+    color: #193E58;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.subMenu li:hover {
+    background-color: rgba(25, 80, 68, 0.1);
+}
+
+.rotate {
+    transform: rotate(-90deg);
+    color: #193E58;
+}
+
+.rotate:before {
+    color: #193E58;
+}
+
+
 #menu__toggle,
 .hamburger-menu label {
     display: none;
 }
 
 @media all and (max-width:800px) {
-
+    .menu {
+        /*        height: 663px;*/
+        overflow-y: auto;
+    }
 
     .dashboard {
         height: 100%;
@@ -119,5 +292,11 @@
 
     .menu {
         height: 884px;
+    }
+}
+
+@media all and (max-width:360px) {
+    .fa-caret-down:before {
+        top: -2px;
     }
 }
