--- a/style/page2_style.css
+++ b/style/page2_style.css
@@ -57,6 +57,10 @@ form {
     align-items: center;
 }
 
+.tabsBox::-webkit-scrollbar {
+    width: 0;
+}
+
 .tabsBox .tabsLine:last-of-type {
     width: 800px;
     box-shadow: 0px 3px 18px #52575D19;
@@ -456,6 +460,12 @@ select option {
 #sortablelist2,
 #sortablelist3 {
     overflow-x: scroll;
+    border-radius: 0 0 6px 0;
+}
+
+#sortablelist2::-webkit-scrollbar,
+#sortablelist3::-webkit-scrollbar {
+    width: 0;
 }
 
 .tableTickets .row {
@@ -472,6 +482,11 @@ select option {
     margin-left: 0;
     overflow-x: auto;
     width: 1508px;
+
+}
+
+.tableTickets .row:last-of-type {
+    border-radius: 0 6px 0 6px;
 }
 
 .tableTickets .row2 {
@@ -830,6 +845,71 @@ select option {
 .yellowBtn span {
     font-size: 28px !important;
     font-weight: 400;
-    top: 0!important;
+    top: 0 !important;
     margin: 0;
+}
+
+.tooltipIcon {
+    background-image: url(../img/info-circle1.png);
+    background-position: center;
+    background-size: cover;
+    width: 10.8px;
+    height: 10.8px;
+    border-radius: 50%;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    top: -10px;
+    margin: 0 0 0 3px;
+}
+
+.tickets .content label .tooltipIcon {
+    top: -3px;
+}
+
+.tooltipIcon:active,
+.tooltipIcon:focus {
+    border: none;
+    outline: none;
+}
+
+.tooltip-inner {
+    background-color: white;
+    border: 2px solid #F0B52D;
+    opacity: 1;
+    color: #4D4D4D;
+    font-size: 10px;
+    text-align: left;
+    width: 304px;
+    max-width: 304px;
+}
+
+.bs-tooltip-auto[x-placement^=right] .arrow::before,
+.bs-tooltip-right .arrow::before {
+    right: 0;
+    border-width: 0px 0 2px 2px;
+    border-right-color: transparent;
+    border-left-color: #F0B52D;
+    border-bottom-color: #F0B52D;
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    transform: rotate(45deg);
+    left: 9px;
+}
+
+.tooltip .arrow::before {
+    position: absolute;
+    content: "";
+    /*    border-color: white;*/
+    border-style: solid;
+}
+
+.bs-tooltip-auto[x-placement^=right],
+.bs-tooltip-right {
+    padding: 0 1rem;
+}
+
+.tooltip.show {
+    opacity: 1;
 }
