--- a/style/page2_style.css
+++ b/style/page2_style.css
@@ -11,6 +11,10 @@ form {
     background-color: white;
 }
 
+.menu .subMenu li:nth-of-type(3):hover {
+    background-color: rgba(25, 80, 68, 0.1);
+}
+
 .menu li:nth-of-type(3) .title {
     color: #193E58;
 }
@@ -197,7 +201,6 @@ form {
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: space-between;
-    /*    margin: 0 0 22px;*/
 }
 
 .tickets .line:nth-of-type(4) {
@@ -238,10 +241,6 @@ select {
     font-size: 12px;
 }
 
-input {
-    /*    padding: 0 20px 4px;*/
-}
-
 input:active,
 select :active,
 input:focus,
@@ -250,6 +249,13 @@ textarea:active,
 textarea:focus {
     border: 2px solid #193E58;
     outline: none;
+}
+
+.form-control:focus {
+    background-color: #fff;
+    border-color: #193E58;
+    outline: 0;
+    box-shadow: none;
 }
 
 select {
@@ -340,16 +346,22 @@ input::placeholder {
 .tickets .aantal {
     width: 93px;
     text-align: center;
+    padding: 0;
 }
 
 .tickets .prijs input {
     width: 133px;
     border-radius: 0 4px 4px 0;
+    padding: 0;
+    text-align: center;
 }
 
 .tickets .calendar {
     width: 247px;
     border-radius: 4px 0 0 4px;
+    color: #4D4D4D;
+    font-size: 12px;
+
 }
 
 .tickets .time {
@@ -357,6 +369,16 @@ input::placeholder {
     border-left: none;
     border-radius: 0 4px 4px 0;
     text-align: center;
+    border-left: none;
+    color: #4D4D4D;
+    font-size: 12px;
+    padding: 0;
+}
+
+.tickets .time:focus,
+.tickets .time:active {
+    border-color: #193E58;
+    border-left: 2px solid #193E58;
 }
 
 .tickets .template {
@@ -387,7 +409,7 @@ input::placeholder {
 }
 
 .tickets textarea {
-    width: 987px;
+    width: 992px;
     height: 198px;
     border: 2px solid rgba(0, 0, 0, 0.08);
     padding: 15px 20px;
@@ -552,6 +574,7 @@ textarea:focus {
 .tableTickets .row:hover .column1 {
     border-left: 5px solid #F0B52D;
 }
+
 
 .row:hover {
     background-color: #F0B52D0F;
@@ -771,6 +794,7 @@ textarea:focus {
 .modalBox .aantal {
     width: 132px;
     text-align: center;
+    padding: 0;
 }
 
 .modalBox .line .date {
@@ -791,18 +815,31 @@ textarea:focus {
     border-top: 2px solid rgba(0, 0, 0, 0.08);
     border-bottom: 2px solid rgba(0, 0, 0, 0.08);
     border-radius: 4px 0 0 4px;
+    color: #4D4D4D;
+    font-size: 12px;
+}
+
+.modalBox .line .date .calendar:focus,
+.modalBox .line .date .calendar:active,
+.modalBox .line .date .time:focus,
+.modalBox .line .date .time:active {
+    border: 2px solid #193E58;
 }
 
 .modalBox .line .date .time {
     width: 97px;
     border: 2px solid rgba(0, 0, 0, 0.08);
     border-radius: 0 4px 4px 0;
+    padding: 0;
+    color: #4D4D4D;
+    font-size: 12px;
 }
 
 .modalBox input,
 .modalBox .prijs p,
 .modalBox select {
     margin: 0 0 27px;
+    text-align: center;
 }
 
 .modalBox select {
@@ -832,6 +869,7 @@ textarea:focus {
 .modalBox .minMax input {
     width: 110px;
     text-align: center;
+    padding: 0;
 }
 
 .modalBox .minMax input:first-of-type {
@@ -840,21 +878,25 @@ textarea:focus {
 
 .modalBox .text {
     width: 100%;
+
 }
 
 .modalBox .text input {
     width: 100%;
+    text-align: left;
 }
 
 .modalBox .middleText {
     width: 413px;
     display: flex;
     justify-content: space-between;
+    text-align: left;
 }
 
 .modalBox .prijs input {
     width: 143px;
     border-radius: 0 4px 4px 0;
+    padding: 0;
 }
 
 .modalBox .btn {
