--- a/style/page2_style.css
+++ b/style/page2_style.css
@@ -932,6 +932,8 @@ textarea:focus {
     align-items: center;
     padding: 0 17px;
     border-radius: 6px;
+    z-index: 10;
+    position: relative;
 }
 
 .yellowBtn span {
