--- a/style/page2_style.css
+++ b/style/page2_style.css
@@ -246,17 +246,21 @@ select :active,
 input:focus,
 select:focus,
 textarea:active,
-textarea:focus {
+textarea:focus,
+.modalBox textarea:focus,
+.modalBox textarea:active {
     border: 2px solid #193E58;
     outline: none;
 }
 
+/*
 .form-control:focus {
     background-color: #fff;
     border-color: #193E58;
     outline: 0;
     box-shadow: none;
 }
+*/
 
 select {
     background-image: url(../img/arrow-down.png);
@@ -372,6 +376,7 @@ input::placeholder {
     color: #4D4D4D;
     font-size: 12px;
     padding: 0;
+    background-color: transparent;
 }
 
 .tickets .time:focus,
@@ -805,7 +810,7 @@ textarea:focus {
 
 .modalBox .line .date .calendar {
     background: #fff url(../img/calendar.png) 93% 50% no-repeat;
-    background-size: 4%;
+    background-size: 8%;
     width: 317px;
     border-left: 2px solid rgba(0, 0, 0, 0.08);
     border-right: none;
@@ -818,19 +823,22 @@ textarea:focus {
 
 .modalBox .line .date .calendar:focus,
 .modalBox .line .date .calendar:active,
-.modalBox .line .date .time:focus,
-.modalBox .line .date .time:active {
+.modalBox .line .date .time2 input:active,
+.modalBox .line .date .time2 input:focus {
     border: 2px solid #193E58;
 }
 
-.modalBox .line .date .time {
+.modalBox .line .date .time2 {
     width: 97px;
     border: 2px solid rgba(0, 0, 0, 0.08);
     border-radius: 0 4px 4px 0;
     padding: 0;
     color: #4D4D4D;
     font-size: 12px;
+    background-image: none;
+    background-color: transparent;
 }
+
 
 .modalBox input,
 .modalBox .prijs p,
@@ -855,7 +863,8 @@ textarea:focus {
     padding: 15px 20px;
     border: 2px solid rgba(0, 0, 0, 0.08);
     border-radius: 4px;
-    color: #808080;
+    color: #4D4D4D;
+    font-size: 12px;
 }
 
 .modalBox .minMax {
@@ -1006,4 +1015,84 @@ textarea:focus {
 
 .tooltip.show {
     opacity: 1;
+}
+
+.time-picker {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    transition: all .4s ease;
+    height: 0;
+    overflow: hidden;
+}
+
+.time-picker .set-time {
+    display: flex;
+    justify-content: center !important;
+    align-items: center;
+}
+
+.time-picker .label {
+    width: 60px;
+    margin: 0 5px;
+    text-align: center;
+    line-height: 34px;
+    display: flex;
+}
+
+.time-picker .label a {
+    display: block;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    width: 31px;
+    height: 40px;
+}
+
+.time-picker .label .set {
+    text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    color: #393939;
+    font-size: 14px;
+    font-weight: bold;
+    border: transparent;
+    margin: 0;
+    padding: 0;
+}
+
+.time-picker #submitTime {
+    text-align: center;
+    margin: auto;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    background-image: url(../img/clock.png);
+
+}
+
+.time-picker.open {
+    border: 2px solid rgba(0, 0, 0, 0.08);
+    transition: all .5s ease;
+    height: auto;
+    background-color: #FCFCFC;
+    position: absolute;
+    width: 184px;
+    border-radius: 6px;
+    right: 0;
+    top: 50px;
+    display: flex;
+    flex-direction: row;
+    z-index: 2;
+}
+
+.timeForm {
+    position: relative;
 }
