--- a/style/page2_style.css
+++ b/style/page2_style.css
@@ -249,18 +249,9 @@ textarea:active,
 textarea:focus,
 .modalBox textarea:focus,
 .modalBox textarea:active {
-    border: 2px solid #193E58;
+    border: 2px solid #193E58!important;
     outline: none;
 }
-
-/*
-.form-control:focus {
-    background-color: #fff;
-    border-color: #193E58;
-    outline: 0;
-    box-shadow: none;
-}
-*/
 
 select {
     background-image: url(../img/arrow-down.png);
@@ -278,6 +269,7 @@ select {
     background: #fff url(../img/calendar.png) 87% 50% no-repeat;
     background-size: 10%;
 }
+
 [type="time"] {
     background: #fff url(../img/clock.png) 87% 50% no-repeat;
     background-size: 25%;
@@ -286,17 +278,18 @@ select {
 
 /* 'X' button for resetting/clearing time */
 input[type="time"]::-webkit-clear-button {
-  display: none;
+    display: none;
 }
 
 /* Up/Down arrows for incrementing/decrementing the value */
 input[type="time"]::-webkit-inner-spin-button {
-  display: none;
+    display: none;
 }
 
 [type="date"]::-webkit-inner-spin-button {
     display: none;
 }
+
 [type="time"]::-webkit-inner-spin-button {
     display: none;
 }
@@ -305,6 +298,7 @@ input[type="time"]::-webkit-inner-spin-button {
 [type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0;
 }
+
 [type="time"]::-webkit-calendar-picker-indicator {
     opacity: 0;
 }
@@ -399,7 +393,7 @@ input::placeholder {
     padding: 0 0 0 3px;
     background-color: transparent;
     -webkit-appearance: none;
-    
+
 }
 
 .tickets .time:focus,
@@ -849,7 +843,7 @@ textarea:focus {
 .modalBox .line .date .calendar:active,
 .modalBox .line .date .time2 input:active,
 .modalBox .line .date .time2 input:focus {
-    border: 2px solid #193E58;
+    border: 2px solid #193E58!important;
 }
 
 .modalBox .line .date .time2 {
